[package]
name = "serde_wsv"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://honestlysam.uk/"
homepage = "https://honestlysam.uk"
repository = "https://github.com/honestlysamuk/serde_wsv"
readme = "README.md"
description = "Serde implementation for the WSV specification. See https://dev.stenway.com/WSV/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
